fix IE8 flickering breadcrumb overlap bug

--- a/app/assets/stylesheets/peoplefinder/peoplefinder-lt-ie9.css.scss
+++ b/app/assets/stylesheets/peoplefinder/peoplefinder-lt-ie9.css.scss
@@ -19,3 +19,10 @@ form {
     border: 1px solid;
   }
 }
+
+/*required for IE8 to prevent flickering breadcrumb overlap bug*/
+.breadcrumbs {
+  li {
+    margin-right: 1px;
+  }
+}
